getUniques added to RecordTypeHandler